plugins {
    id 'java'
    id 'application'
    id 'jacoco'
    id 'com.google.protobuf' version '0.9.4'
}

group = 'org.company'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

def grpcVersion = '1.75.0'
def protobufVersion = '3.25.8'
def postgresqlVersion = '42.7.3'
def hikariCPVersion = '5.1.0'
def log4jVersion = '2.25.3'
def junitVersion = '5.11.3'
def testcontainersVersion = '1.21.4'
def lombokVersion = '1.18.42'

dependencies {
    // gRPC dependencies
    implementation "io.grpc:grpc-netty-shaded:$grpcVersion"
    implementation "io.grpc:grpc-protobuf:$grpcVersion"
    implementation "io.grpc:grpc-stub:$grpcVersion"
    implementation "io.grpc:grpc-services:$grpcVersion"
    
    // Database dependencies
    implementation "org.postgresql:postgresql:$postgresqlVersion"
    implementation "com.zaxxer:HikariCP:$hikariCPVersion"
    
    // Logging
    implementation "org.apache.logging.log4j:log4j-core:$log4jVersion"
    implementation "org.apache.logging.log4j:log4j-slf4j2-impl:$log4jVersion"

    implementation "org.yaml:snakeyaml:2.0"

    compileOnly "org.projectlombok:lombok:$lombokVersion"
    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
    
    // Testing
    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
    testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
    testImplementation "org.testcontainers:testcontainers:$testcontainersVersion"
    testImplementation "org.testcontainers:postgresql:$testcontainersVersion"
    testImplementation "org.testcontainers:junit-jupiter:$testcontainersVersion"
    testImplementation "org.mockito:mockito-core:5.14.2"
    testImplementation "org.mockito:mockito-junit-jupiter:5.14.2"
    testImplementation "io.grpc:grpc-testing:$grpcVersion"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:$protobufVersion"
    }
    
    plugins {
        grpc {
            artifact = "io.grpc:protoc-gen-grpc-java:$grpcVersion"
        }
    }
    
    generateProtoTasks {
        all().each { task ->
            task.plugins {
                grpc {}
            }
        }
    }
    
    // Set proto source root to external protobuf module
    generatedFilesBaseDir = "$projectDir/build/generated"
}

// Configure proto source directory
sourceSets {
    main {
        proto {
            srcDir '../spaced-repetition-protobuf/src/main/proto'
        }
    }
}

application {
    mainClass = 'org.company.spacedrepetitiondata.DataServiceApplication'
}

test {
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed'
    }
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
        csv.required = true
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
    
    classDirectories.setFrom(
        files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                '**/model/**',
                '**/config/**',
                '**/constants/**',
                '**/exception/**'
            ])
        })
    )
}

jacocoTestCoverageVerification {
    classDirectories.setFrom(
        files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                '**/model/**',
                '**/config/**',
                '**/constants/**',
                '**/exception/**',
                '**/health/**',
                '**/grpc/**',
                '**/*DataServiceApplication*'
            ])
        })
    )
    violationRules {
        rule {
            limit {
                minimum = 0.0
            }
        }
    }
}

// Docker configuration will be added when needed
// For now, use the existing Dockerfile for building images

// Ensure test coverage verification runs after report generation
check {
    dependsOn jacocoTestCoverageVerification
}

// Configure jar task to include version in jar name and create fat jar
jar {
    archiveBaseName = 'data-service'
    archiveVersion = ''
    manifest {
        attributes 'Main-Class': application.mainClass
    }
    from configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}